--- a/README.Rmd
+++ b/README.Rmd
@@ -13,33 +13,33 @@ knitr::opts_chunk$set(
 )
 ```
 
-# PlantTradcker
+# plantTracker
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of PlantTracker is to ...
+The goal of plantTracker is to ...
 
 ## Installation
 
-You can install the released version of PlantTracker from [CRAN](https://CRAN.R-project.org) with: (someday...)
+You can install the released version of plantTracker from [CRAN](https://CRAN.R-project.org) with: (someday...)
 
 ``` r
-install.packages("PlantTracker")
+#install.packages("plantTracker")
 ```
 
 And the development version from [GitHub](https://github.com/) with: (also someday...)
 
 ``` r
-# install.packages("devtools")
-devtools::install_github("aestears/PlantTracker")
+install.packages("devtools")
+devtools::install_github("aestears/plantTracker")
 ```
 ## Example
 
 This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
-library(PlantTracker)
+# library(plantTracker)
 ## basic example code
 ```
 
