--- a/vignettes/Suggested_plantTracker_Workflow.Rmd
+++ b/vignettes/Suggested_plantTracker_Workflow.Rmd
@@ -560,19 +560,19 @@ You can stop here and proceed to your own analyses using the demographic data
 you generated, or you can proceed with other plantTracker functions outlined 
 below for some additional useful data.
 
-### *3* Calculating a Metric of Competition
+### *3* Calculating Local Neighborhood Density
 It is often useful in demographic analyses to have some idea of the competition 
 (or facilitation) that an individual organism is dealing with. Interactions 
 between individuals can have a profound impact on whether an organism survives 
 and grows. Spatial datasets of plant occurrence allow us to generate an estimate 
 of the interactions an individual plant has with other plants by determining how 
-many other individuals surround each plant. While this isn't a direct measure of
-competition or facilitation, it gives us an estimate that we can include in 
-demographic models.
+many other individuals occupy the 'local neighborhood' of each focal plant. 
+While this isn't a direct measure ofcompetition or facilitation, it gives us an
+estimate that we can include in demographic models.
 
 #### *3.1* Function options and arguments
-The `getNeighbors()` function in plantTracker calculates this competition 
-estimate for each unique individual in your dataset. A user-specified buffer is 
+The `getNeighbors()` function in plantTracker calculates local neighborhood 
+density for each unique individual in your dataset. A user-specified buffer is 
 drawn around each individual, and then the function counts the number of other 
 plants within this buffer.This function can only be run on a dataset where each 
 unique individual (genet) is represented by only one row of data. If the genet 
@@ -586,18 +586,19 @@ right after `trackSpp()`, your dataset will already have this unique identifier
 in a column called "trackID".
 
 `getNeighbors()` has several options that allow you 
-to customize how the competition metric is calculated. 
+to customize how local neighborhood density is calculated. 
 
 * First, the user can decide how the function 'counts' other plants inside the 
-buffer zone around the focal individual. Option 1) The function will calculate a 
-tally of the number of genets inside the buffer zone. Option 2) The function
+buffer zone around the focal individual. Option 1) The function will  
+tally the number of genets inside the buffer zone. Option 2) The function
 will calculate the proportion of the buffer zone that is occupied by 
 other plants. 
 
-* Second, the user can decide whether the function will calculate a metric of 
-intraspecific competition (only consider other plants in the buffer zone of the 
-same species as the focal individual) or interspecific competition (consider all 
-other plants in the buffer zone, regardless of species).
+* Second, the user can decide whether the function will calculate  
+intraspecific local neighborhood density (only consider other plants in the 
+buffer zone of the same species as the focal individual) or interspecific local 
+neighborhood density (consider all other plants in the buffer zone, regardless 
+of species).
 
 ```{r echo = FALSE, fig.width=6, fig.align = 'center', fig.cap = "Figure 3.1: This individual outlined in pink is a focal individual, and the pale pink shows a 10 cm buffer around it. "}
 datComp <- datTrackSpp[datTrackSpp$Year == 1922,]
@@ -621,12 +622,12 @@ ggplot(datComp) +
  scale_color_discrete(type = c( "#009E73", "#F0E442","#E69F00",  "#56B4E9", "#A6A6A6")) 
 ```
 
-```{r echo = FALSE, warnings = FALSE, fig.width=7, fig.align = 'center', fig.cap = "Figure 3.2: The 10cm buffer around the focal individual overlaps with 5 other unique individuals of two species. These overlapping individuals are outlined in dark grey. Using the 'count' method in `getNeighbors()`, we would get an intraspecific competition value of 3, and an interspecific competition value of 5."}
+```{r echo = FALSE, warnings = FALSE, message=FALSE, fig.width=7, fig.align = 'center', fig.cap = "Figure 3.2: The 10cm buffer around the focal individual overlaps with 5 other unique individuals of two species. These overlapping individuals are outlined in dark grey. Using the 'count' method in `getNeighbors()`, we would get an intraspecific competition value of 3, and an interspecific competition value of 5."}
 
 suppressWarnings(st_intersects(st_buffer(datComp[datComp$trackID == "HETCON_1922_6",], .1), datComp))
 countMethod <- datComp[c(3,5,63,67,70),]
-areaMethodTemp <- st_intersection(st_buffer(
-  datComp[datComp$trackID == "HETCON_1922_6",], .1), datComp)
+areaMethodTemp <- suppressWarnings(suppressMessages(st_intersection(st_buffer(
+  datComp[datComp$trackID == "HETCON_1922_6",], .1), datComp)))
 areaMethod <- areaMethodTemp[st_is(areaMethodTemp, c("POLYGON", "MULTIPOLYGON")),]
 
 ggplot(datComp) +
